--- a/PracticeEx/PracticeEx/PracticeEx.csproj
+++ b/PracticeEx/PracticeEx/PracticeEx.csproj
@@ -44,11 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayListEx.cs" />
+    <Compile Include="Break.cs" />
+    <Compile Include="Delegate\DelegExemple.cs" />
+    <Compile Include="Enum.cs" />
+    <Compile Include="Impar.cs" />
     <Compile Include="JaggedArray.cs" />
     <Compile Include="LargestAndSmallesNumberArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SortArray.cs" />
+    <Compile Include="Delegate\TestDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
