--- a/PracticeEx/PracticeEx/EventMVA/EventMVA.csproj
+++ b/PracticeEx/PracticeEx/EventMVA/EventMVA.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B6308AD-7CF1-44A1-B3F9-636E29DF3858}</ProjectGuid>
+    <ProjectGuid>{EFCFBCBB-ADF2-4893-B1DD-456C1889FBD1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PracticeEx</RootNamespace>
-    <AssemblyName>PracticeEx</AssemblyName>
+    <RootNamespace>EventMVA</RootNamespace>
+    <AssemblyName>EventMVA</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,19 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Delegate\AddTwoNumbers.cs" />
-    <Compile Include="Exercitii\ArrayListEx.cs" />
-    <Compile Include="Exercitii\Break.cs" />
-    <Compile Include="Delegate\DelegExemple.cs" />
-    <Compile Include="Delegate\MulticastEx.cs" />
-    <Compile Include="Exercitii\Enum.cs" />
-    <Compile Include="Exercitii\Impar.cs" />
-    <Compile Include="Exercitii\JaggedArray.cs" />
-    <Compile Include="Exercitii\LargestAndSmallesNumberArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Exercitii\SortArray.cs" />
-    <Compile Include="Delegate\TestDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
