--- a/PracticeEx/PracticeEx/PracticeEx.csproj
+++ b/PracticeEx/PracticeEx/PracticeEx.csproj
@@ -46,15 +46,18 @@
     <Compile Include="Delegate\AddTwoNumbers.cs" />
     <Compile Include="Delegate\OnotherExempleOfDelegate.cs" />
     <Compile Include="Exercitii\AccesSpecifier.cs" />
+    <Compile Include="Exercitii\Algo.cs" />
     <Compile Include="Exercitii\ArrayListEx.cs" />
     <Compile Include="Exercitii\Break.cs" />
     <Compile Include="Delegate\DelegExemple.cs" />
     <Compile Include="Delegate\MulticastEx.cs" />
+    <Compile Include="Exercitii\Ex.cs" />
     <Compile Include="Exercitii\Prime.cs" />
     <Compile Include="Exercitii\Enum.cs" />
     <Compile Include="Exercitii\Impar.cs" />
     <Compile Include="Exercitii\JaggedArray.cs" />
     <Compile Include="Exercitii\LargestAndSmallesNumberArray.cs" />
+    <Compile Include="Exercitii\ExerString.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exercitii\SortArray.cs" />
